fix: remove align unnecessary

--- a/src/pages/home/components/Sidebar/components/SocialMediaForm/SocialMediaList.module.scss
+++ b/src/pages/home/components/Sidebar/components/SocialMediaForm/SocialMediaList.module.scss
@@ -8,15 +8,6 @@
   gap: 1.6rem;
 
   .socialItem {
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-    justify-content: center;
-
-    color: $primaryGray;
-    font-weight: bold;
-
     padding: 1.2rem 0;
     border: 1px solid $primaryGray;
 
